--- a/pomodoro.cabal
+++ b/pomodoro.cabal
@@ -12,29 +12,12 @@ description:         Pomodoro.
 Homepage:            https://github.com/blackheaven/pomodoro
 -- tested-with:         GHC==9.6.6, GHC==9.8.4, GHC==9.10.1, GHC==9.12.1
 
-library
-  default-language:   GHC2021
+common common-all
+  default-language: GHC2021
   build-depends:
       base == 4.*
     , time >= 1.9 && < 2
     , text
-  hs-source-dirs: src
-  -- exposed-modules:
-  other-modules:
-    Paths_pomodoro
-  autogen-modules:
-    Paths_pomodoro
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
-
-test-suite spec
-  type: exitcode-stdio-1.0
-  hs-source-dirs: test
-  main-is: Spec.hs
-  other-modules:
-    Paths_pomodoro
-  autogen-modules:
-    Paths_pomodoro
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
   default-extensions:
     DataKinds
     DefaultSignatures
@@ -56,11 +39,30 @@ test-suite spec
     TypeApplications
     TypeFamilies
     TypeOperators
+
+library
+  import: common-all
+  hs-source-dirs: src
+  exposed-modules:
+    Pomodoro.Domain
+  other-modules:
+    Paths_pomodoro
+  autogen-modules:
+    Paths_pomodoro
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
+
+test-suite spec
+  import: common-all
+  type: exitcode-stdio-1.0
+  hs-source-dirs: test
+  main-is: Spec.hs
+  other-modules:
+    Paths_pomodoro
+  autogen-modules:
+    Paths_pomodoro
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
   build-depends:
       base
-    -- , pomodoro
+    , pomodoro
     , hspec
     , hspec-core
-    , time
-    , text
-  default-language: GHC2021
